CDV-1464 : switch to using weak valued maps from google collections
git-svn-id: https://svn.terracotta.org/repo/tc/dso/trunk@15296 7fc7bbf3-cf45-46d4-be06-341739edd864